# mojira-dbobs

./: .gitignore  Cargo.toml  README.md  check.sh  dbobs-restart.sh  dbobs-run.sh  dbobs-screen.sh  dbobs.sh  restart.sh  screen.sh  stop.sh
.github/workflows/: deploy.yml
src/: commands.rs  main.rs  observer.rs
