[package]
name = "mojira-dbobs"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
