[package]
name = "mojira-dbobs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"

[dependencies.serenity]
version = "0.12"
default-features = false
features = [
    "client",
    "gateway",
    "default_native_tls",
    "model",
]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
